Dragging and resizing working.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -223,3 +223,9 @@ body {
   font-size: 32px;
   background-color: blue;
 }
+
+#createScreenLogoCanvas {
+  width: 800px;
+  height: 300px;
+  margin-left: 50px;
+}
