--- a/client/src/App.css
+++ b/client/src/App.css
@@ -204,17 +204,17 @@ body {
 }
 
 #addTextBoxButton {
-  position: absolute;
-  right: 0;
-  margin-right: 50px;
-  width: 150px;
+  margin-top: 8px;
+  margin-bottom: 10px;
+  margin-left: 8px;
+  background-color: aliceblue;
 }
 
 #addImageButton {
-  position: absolute;
-  right: 0;
-  margin-right: 50px;
-  width: 150px;
+  margin-top: 8px;
+  margin-bottom: 10px;
+  margin-left: 8px;
+  background-color: aliceblue;
 }
 
 #test {
@@ -238,8 +238,9 @@ body {
 }
 
 #downloadLogoButton {
+  margin-top: 8px;
   margin-bottom: 10px;
-  margin-left: 5px;
+  margin-left: 8px;
   background-color: aliceblue;
 }
 
