--- a/client/src/App.css
+++ b/client/src/App.css
@@ -139,6 +139,10 @@ body {
   display: flex
 }
 
+.panel-heading {
+  display: flex
+}
+
 #editScreenGridContainer {
   width: 95%;
   margin-top: 10px;
@@ -228,7 +232,6 @@ body {
   width: 800px;
   height: 800px;
   margin-left: 50px;
-  background-color: rgb(210, 211, 211);
   border-radius: 20px;
 }
 
@@ -248,10 +251,15 @@ body {
   margin-top: 20px;
 }
 
-#testRND {
-  background-color: red;
-}
-
 #logoCanvasImageZone {
   height : 800px;
+}
+
+#imageLinkTextField {
+  width : 30%;
+  height : 40px;
+  border-radius: 4px;
+  border : none;
+  padding-left: 20px;
+  margin-left: 5px;
 }
